[package]
name = "gosredirector"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
blaze-pk = "0.2.5"
blaze-ssl = "0.1.2"

egui = "0.19.0"
eframe = "0.19.0"
egui_extras = { version = "0.19.0", features = ["image"] }
image = { version = "0.24", features = ["png"] }